# synthesis-agent

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  tutorial.ipynb
figs/: recipy.ipynb
sky/: __init__.py
sky/cli/: __init__.py  ascii_art.py  main.py
sky/core/: __init__.py  synthesis_agent.py
sky/report/: html_generator.py
src/: __init__.py  agent.py  embedding.py  recursive_synthesis.py  schema.py  search_api.py
src/utils/: get_mp_embedding.py
